refactor: be a main screen addon instead
- unignored .import files
- update uids
- fix typo on ResourceView.gd
- some SplitContainer split offset adjustments
- license update & duplicate
- removed debug texture
- update addon version
- print after refresh

--- a/addons/project-statistics/plugin.cfg
+++ b/addons/project-statistics/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="Statistics"
-description="Shows your project statistics"
-author="Abdera7mane"
-version="0.1"
+name="Project Statistics"
+description="Shows your Godot 4 project statistics"
+author="Etherealxx"
+version="0.2.0"
 script="plugin.gd"
