--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
 # Godot-specific ignores
 .import/
 .export/
-*.import
+# *.import
 export.cfg
 export_presets.cfg
-project.godot
+# project.godot
 default_env.tres
-icon.png
-
-# Mono-specific ignores
-.mono/
-data_*/
+# icon.png
 
 # VSCode-specific ignores
 .vscode/
+/.godot
+/addons/addon_toggler
+/addons/explore-editor-theme
